// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApartmentNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="apartment_number"
      >
        Numer mieszkania
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="testId"
          label="Numer mieszkania"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value="12345678900"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podany numer mieszkania jest nieprawidłowy
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot 1`] = `
<input
  class="sc-fodVxV kubVCF"
  id="testId"
  label="Numer mieszkania"
  name="apartment_number"
  placeholder="Numer mieszkania"
  value=""
/>
`;

exports[`<ApartmentNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV kubVCF"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value=""
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
